--- a/src/app/cc-color-picker/cc-color-picker.component.html
+++ b/src/app/cc-color-picker/cc-color-picker.component.html
@@ -3,7 +3,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 
-<div id="kh-colorpicker" class="backdrop" *ngIf="pickerIsEnabled === true">
+<div id="cp-wrapper" class="backdrop" *ngIf="pickerIsEnabled === true">
   <div id="wrapper">
     <div id="container">
       <div id="header" [style.background-color]="currentColor"><span
